/* Copyright (C) 2014-2015 Alexander Shishenko <GamePad64@gmail.com>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";
package cryptodiff.internals;

message EncFileMap_s {
	uint32 maxblocksize = 2;
	uint32 minblocksize = 3;
	message Block_s {
		bytes encrypted_hash = 1;
		uint32 blocksize = 2;
		bytes iv = 3;

		bytes encrypted_hashes = 4;
	}
	repeated Block_s blocks = 1;
}
